--- a/front/public/index.html
+++ b/front/public/index.html
@@ -35,7 +35,7 @@
       rel="stylesheet"
     />
 
-    <title>BMOVIE • Social film discovery</title>
+    <title>A+MOVIE • Social film discovery</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
